[tool.poetry]
name = "ufc-goat"
version = "0.1.0"
description = "UFC fighter stat analysis to determine the Greatest Of All Time"
authors = ["Brittany Carusone <brcarusone@gmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bs4 = "^0.0.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
